Issues fixed: Safari specific: Disciplines names are not displaying properly in Questions Banks Tab and  Some of the alphabets are truncating from down while dragging the Folders

--- a/WebContent/styles/new-ui.css
+++ b/WebContent/styles/new-ui.css
@@ -499,6 +499,7 @@ span.glyphicon.glyphicon-info-sign {
   text-overflow: ellipsis;
   height:15px;
   margin-top: 9px;
+  line-height: 1.2em;
 }
 
 .labelCaption{
@@ -506,7 +507,7 @@ span.glyphicon.glyphicon-info-sign {
     text-overflow: ellipsis;
     width: 20em;
     cursor: pointer;
-    line-height: 1.5em;
+    line-height: 1.2em;
 }
 
 .testCaptionLabel {
